# dynamic-tables-ducklake

./: .gitignore  README.md  TODO.md  justfile  pyproject.toml
.benchmarks/Linux-CPython-3.12-64bit/: 0001_phase2-initial.json
.github/: copilot-instructions.md
docs/: 01-overview.md  02-affected-keys-strategy.md  02-multi-table-joins.md  03-snapshot-isolation.md  04-multi-worker-architecture.md  05-testing-strategy.md  06-sql-interface.md  07-metadata-schema.md  08-implementation-phases.md  09-aggregation-strategy.md  09-multi-table-joins.md  10-transactions-consistency.md  11-performance-considerations.md  12-deduplication-strategy.md  13-large-cardinality-handling.md  14-parallel-single-table-refresh.md  15-worker-configuration.md  BENCHMARKING.md  DEVELOPMENT.md
examples/: README.md  chained_tables_example.sql  customer_metrics.sql  high_cardinality_table.sql  high_value_customers.sql  product_sales.sql
research/: 2404.16486v1.txt  2504.10438v1.txt  3589776.txt  ANALYSIS.md  README.md
src/dynamic_tables/: __init__.py  metadata.py  parser.py  profiling.py  refresh.py
tests/: __init__.py  conftest.py  conftest_benchmark.py  run_benchmarks.py  test_benchmarks_phase2.py  test_infrastructure.py  test_parser.py  test_refresh.py  test_snapshot_conflicts.py
