[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamic-tables-ducklake"
version = "0.1.0"
description = "Self-refreshing materialized views for DuckDB with object storage backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "sqlglot>=21.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "minio>=7.2.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "testcontainers>=3.7.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
dtable = "dynamic_tables.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_tables"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
