[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamic-tables-ducklake"
version = "0.1.0"
description = "Self-refreshing materialized views for DuckDB with object storage backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "sqlglot>=21.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark[histogram]>=4.0.0",
    "testcontainers>=3.7.0",
    "minio>=7.2.0",
    "ruff>=0.1.0",
    "ty>=0.0.1",
    "memory-profiler>=0.61.0",
    "matplotlib>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_tables"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "quick: Quick benchmarks with tiny/small datasets (~20s)",
    "full: Full benchmarks with medium/large/xlarge datasets (~30min)",
]

# Note: pytest-benchmark configuration is passed via CLI in justfile commands
# See: just benchmark-quick, just benchmark, etc.
